@@ -7,24 +7,27 @@ Commandline
 There's no API for simpleredcapbuilder (or rather, no formal API). Instead,
 it installs a single script::
 
-	expand-redcap-schema [-h] [-o OUTFILE] [-i INCLUDE_TAGS]
-	                        [-x EXCLUDE_TAGS] [-n] [-v INCLUDE_VARS]
-	                        infile
+	usage: expand-redcap-schema [-h] [-o OUTFILE] [-n]
+	                            [-i INCLUDE_TAGS | -x EXCLUDE_TAGS]
+	                            [-v INCLUDE_VARS] [--extra-cols | --no-extra-cols]
+	                            infile
 
 	positional arguments:
-	  infile                compact REDCap file to be processed
+	  infile                compact REDCap file to be processed, CSV or Excel
 
 	optional arguments:
 	  -h, --help            show this help message and exit
 	  -o OUTFILE, --outfile OUTFILE
 	                        output expanded redcap data dictionary
-	  -i INCLUDE_TAGS, --include-tags INCLUDE_TAGS
-	                        only include untagged sections or those with this tag
-	  -x EXCLUDE_TAGS, --exclude-tags EXCLUDE_TAGS
-	                        exclude sections with this tag
 	  -n, --name            name the output file for the tags passed in
+	  -i INCLUDE_TAGS, --include-tags INCLUDE_TAGS
+	                        only include untagged items or those with this tag
+	  -x EXCLUDE_TAGS, --exclude-tags EXCLUDE_TAGS
+	                        exclude items with this tag
 	  -v INCLUDE_VARS, --include-vars INCLUDE_VARS
 	                        include external file of variables
+	  --extra-cols          allow extra columns in the input
+	  --no-extra-cols       don't allow any extra columns in the input
 
 In brief, this produces a standard REDCap data dictionary from a "compact" form.
 This compact dictionary follows the form of the standard but with two additional
@@ -181,6 +184,15 @@ The following logic is used for deciding which items are included:
 
 See the example ``simple-and-tagged`` for an illustration. Note that the ``-n`` flag is useful for labelling the output of selectively tagged schema.
 
+
+Other features
+--------------
+
+* Extra columns (e.g. for notes or annotations) can be included in the input, but can also be explicitly disallowed with the ``--no-extra-cols`` argument. They will not appear in the output.
+
+* Conversely, not all columns have to be defined or included in the input if they are not being used (e.g. matrix columns). A valid expanded schema that includes these will still be generated. However, the name, label, form and type columns must be included in the input and are actually checked for.
+
+* The values in the type, validation, identifier and required columns are checked in the generated output, to see they are one of the accepted values.
 
 
 Various tips
